--- a/src/css/_vars.scss
+++ b/src/css/_vars.scss
@@ -1,4 +1,4 @@
-$light_lightBase: #eeeeee;
+$light_lightBase: #f1f1f1;
 $light_mediumBase: #e1e1e1;
 $light_darkBase: #8d8d8d;
 
@@ -15,6 +15,7 @@ $hl-blue: #99cfb9;
 
 /* Layout variables */
 $content_width: 80vw;
+$WORK_EXP_MAX_WIDTH: 720px;
 $content_max_width: 800px;
 $HEADER_HEIGHT: 50px;
 
