--- a/src/css/_mainLayout.scss
+++ b/src/css/_mainLayout.scss
@@ -82,7 +82,7 @@ strong{
 			display:inline-block;
 			flex-grow: 1;
 			align-self: center;
-			border-top: 1px solid #7271bb4f;
+			border-top: 2px solid #7271bb4f;
 		}
 		.title{
 			padding: 0 20px;
@@ -114,7 +114,7 @@ strong{
 }
 
 .block#aboutme{
-	background-color: $light_mediumBase;
+	background-color: white;
 }
 
 .block#workexp{
