--- a/src/css/master.css
+++ b/src/css/master.css
@@ -7,7 +7,7 @@ body, html {
   margin: 0;
   padding: 0;
   font-family: "Quicksand", sans-serif;
-  background-color: #eeeeee;
+  background-color: #f1f1f1;
   color: #464e79;
   font-size: 12pt;
   height: 100%;
@@ -79,7 +79,7 @@ strong {
   display: inline-block;
   flex-grow: 1;
   align-self: center;
-  border-top: 1px solid #7271bb4f;
+  border-top: 2px solid #7271bb4f;
 }
 .block .section_title_wrapper .title {
   padding: 0 20px;
@@ -105,7 +105,7 @@ strong {
 }
 
 .block#aboutme {
-  background-color: #e1e1e1;
+  background-color: white;
 }
 
 .block#workexp {
@@ -238,7 +238,7 @@ strong {
 .work_card {
   position: relative;
   width: 80vw;
-  max-width: 700px;
+  max-width: 720px;
   margin: 0 auto;
   transition-property: background-color;
   transition-duration: 0.2s;
@@ -271,6 +271,13 @@ strong {
 }
 .work_card .card_head .year span {
   align-self: center;
+  margin-right: 10px;
+}
+.work_card .card_body {
+  line-height: 1.3em;
+}
+.work_card .card_body li {
+  margin-bottom: 10px;
 }
 .work_card .tags span {
   border: 1px solid #99cfb9;
@@ -327,7 +334,7 @@ strong {
   width: auto;
 }
 .modal .title {
-  background-color: #eeeeee;
+  background-color: #f1f1f1;
   font-size: 1.5em;
 }
 
