--- a/src/css/_cards_work.scss
+++ b/src/css/_cards_work.scss
@@ -44,7 +44,7 @@
 
         .year{
             width:fit-content;
-            border-left: 1px solid $light_darkBase;
+            border-left: 1px solid $light_mediumBase;
             padding: 10px 0 10px 20px;
 
             span{
