--- a/src/css/_vars.scss
+++ b/src/css/_vars.scss
@@ -1,10 +1,14 @@
 $light_lightBase: #f1f1f1;
-$light_mediumBase: #e1e1e1;
+$light_mediumBase: #dddddf;
 $light_darkBase: #8d8d8d;
 
 $light_lightKey: #758bdf;
 $light_mediumKey: #6d7fce;
-$light_darkKey: #3e458b;
+$light_darkKey: #4c57bf;
+$light_extraDarkKey: #3e458b;
+
+$light_mediumAltKey: #1eaed1;
+
 $light_text1: #464e79;
 $light_text2: #dce2f3;
 
