--- a/src/css/_modal.scss
+++ b/src/css/_modal.scss
@@ -3,7 +3,7 @@
     top: 0; left: 0;
     width: 100%; 
     height: 100%;
-    background-color: #0000009e;
+    background-color: #00000080;
 
     overflow-y: scroll;
     overflow-x: hidden;
@@ -31,6 +31,7 @@
     background-color: white;
     margin: -10px auto 50px auto;
     width: 70vw;
+    max-width: 750px;
 
     transition-property: margin;
     transition-duration: 0.6s;
@@ -38,7 +39,10 @@
     .modal_unit{
         /* container for each unit of content */
         padding: 18px 35px;
-    }  
+    }
+    .modal_unit:last-of-type{
+        padding-bottom: 50px;
+    }
 
     .image_header{
         height: 280px;
@@ -58,5 +62,5 @@
 
 
 .lightbox.active .modal{
-    margin-top: 20px;
+    margin-top: 30px;
 }
