--- a/src/css/master.css
+++ b/src/css/master.css
@@ -22,7 +22,7 @@
 }
 
 #portfolio_header.detached {
-  background-color: white;
+  background-color: #ffffffe8;
   -webkit-box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.25);
   -moz-box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.25);
   box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.25);
