--- a/src/css/_modal.scss
+++ b/src/css/_modal.scss
@@ -33,15 +33,33 @@
     width: 70vw;
     max-width: 750px;
 
+    line-height: 1.5em;
+
     transition-property: margin;
     transition-duration: 0.6s;
 
     .modal_unit{
         /* container for each unit of content */
-        padding: 18px 35px;
-    }
-    .modal_unit:last-of-type{
-        padding-bottom: 50px;
+        padding: 18px 50px 18px 40px;
+
+        .content_unit{
+            margin: 10px 0 30px 0;
+
+            ul {list-style: none; padding: 0}
+            ul li::before {
+                content: "\25b6";
+                margin-left: -23px; 
+                margin-right: 10px;
+                color: $light_text2;
+            }
+            li{
+                padding-left: 40px;
+            }
+        }
+
+        .content_unit:last-of-type{
+            margin-bottom:40px;
+        }
     }
 
     .image_header{
@@ -57,6 +75,22 @@
     .title{
         background-color: $light_lightBase;
         font-size: 1.5em;
+    }
+
+    .description{
+        margin-left: 30px;
+    }
+
+    .section_title{
+        /* color: #1eaed1; */
+        font-size: 1.1em;
+        align-items: center;
+        font-weight: bold;
+
+        .title_icon{
+            width: 40px;
+            font-size: 1.5em;
+        }
     }
 }
 
