Render "notable challenge" section only if it exists

--- a/src/css/_modal.scss
+++ b/src/css/_modal.scss
@@ -88,6 +88,7 @@
         font-weight: bold;
 
         .title_icon{
+            display: inline-block;
             width: 40px;
             font-size: 1.5em;
         }
