--- a/src/css/master.css
+++ b/src/css/master.css
@@ -416,6 +416,7 @@ strong {
   font-weight: bold;
 }
 .modal .section_title .title_icon {
+  display: inline-block;
   width: 40px;
   font-size: 1.5em;
 }
