--- a/src/css/_vars.scss
+++ b/src/css/_vars.scss
@@ -10,7 +10,7 @@ $light_extraDarkKey: #3e458b;
 $light_mediumAltKey: #1eaed1;
 
 $light_text1: #464e79;
-$light_text2: #dce2f3;
+$light_text2: #b4bdff;
 
 $dark_lightBase: #34332f;
 $dark_text1: #b59e7a;
