--- a/src/css/master.css
+++ b/src/css/master.css
@@ -151,6 +151,17 @@ strong {
   background-color: #dddddf;
 }
 
+#contact {
+  background-color: white;
+}
+
+#footer {
+  padding: 20px;
+  justify-content: flex-end;
+  background-color: #3e458b;
+  color: #b4bdff;
+}
+
 /* style will be added soon */
 .skill_list {
   color: #1eaed1;
@@ -359,16 +370,36 @@ strong {
 }
 
 .modal {
-  position: relatve;
+  position: relative;
   cursor: default;
   align-self: center;
   background-color: white;
   margin: -10px auto 50px auto;
   width: 70vw;
   max-width: 750px;
+  -webkit-box-shadow: 0px 2px 9px 2px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0px 2px 9px 2px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 2px 9px 2px rgba(0, 0, 0, 0.2);
   line-height: 1.5em;
   transition-property: margin;
   transition-duration: 0.6s;
+}
+.modal .close_btn {
+  cursor: pointer;
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 10px;
+  width: 50px;
+  height: 50px;
+  background-image: url("img/close_btn.png");
+  background-size: cover;
+  opacity: 0.7;
+  transition-property: opacity;
+  transition-duration: 0.3s;
+}
+.modal .close_btn:hover {
+  opacity: 1;
 }
 .modal .modal_unit {
   /* container for each unit of content */
@@ -385,7 +416,7 @@ strong {
   content: "▶";
   margin-left: -23px;
   margin-right: 10px;
-  color: #dce2f3;
+  color: #b4bdff;
 }
 .modal .modal_unit .content_unit li {
   padding-left: 40px;
@@ -397,6 +428,10 @@ strong {
   height: 280px;
   overflow-x: scroll;
   overflow-y: hidden;
+}
+.modal .image_header .image_item {
+  width: fit-content;
+  border-right: 5px solid #2e2e2e;
 }
 .modal .image_header img {
   height: 100%;
