--- a/src/css/master.css
+++ b/src/css/master.css
@@ -431,7 +431,11 @@ strong {
 }
 .modal .image_header .image_item {
   width: fit-content;
-  border-right: 5px solid #2e2e2e;
+  border-left: 5px solid #2e2e2e;
+  text-align: center;
+}
+.modal .image_header .image_item:first-of-type {
+  border-left: 0px solid;
 }
 .modal .image_header img {
   height: 100%;
