--- a/src/css/_aboutMeLayout.scss
+++ b/src/css/_aboutMeLayout.scss
@@ -1,5 +1,5 @@
 .skill_list{
-    color: $light_mediumAltKey;
+    color: $light_mediumKey;
     border: 4px solid $light_lightBase;
     padding: 15px 35px;
 }
