--- a/src/css/_vars.scss
+++ b/src/css/_vars.scss
@@ -3,7 +3,7 @@ $light_mediumBase: #dddddf;
 $light_darkBase: #8d8d8d;
 
 $light_lightKey: #758bdf;
-$light_mediumKey: #6d7fce;
+$light_mediumKey: #657eff;
 $light_darkKey: #4c57bf;
 $light_extraDarkKey: #3e458b;
 
