--- a/src/css/master.css
+++ b/src/css/master.css
@@ -12,8 +12,14 @@
 #portfolio_header .group {
   align-self: center;
 }
-#portfolio_header .group span {
+#portfolio_header .group a {
+  color: #657eff;
   padding: 0 10px;
+}
+#portfolio_header .logo {
+  font-size: 1.5em;
+  font-weight: bold;
+  color: #657eff;
 }
 #portfolio_header .group:first-of-type {
   margin-left: 20px;
@@ -164,7 +170,7 @@ strong {
 
 /* style will be added soon */
 .skill_list {
-  color: #1eaed1;
+  color: #657eff;
   border: 4px solid #f1f1f1;
   padding: 15px 35px;
 }
