Make component for activity cards

--- a/src/css/master.css
+++ b/src/css/master.css
@@ -353,6 +353,11 @@ strong {
   font-size: 0.7em;
 }
 
+.card_activity {
+  background-color: white;
+  padding: 30px;
+}
+
 .lightbox {
   position: fixed;
   top: 0;
