Style Activity cards more, and refine detail on a project

--- a/src/css/master.css
+++ b/src/css/master.css
@@ -353,9 +353,24 @@ strong {
   font-size: 0.7em;
 }
 
+.card_activity_wrapper {
+  margin: 20px 0;
+  padding: 0 20px;
+}
+
+.card_activity_wrapper.indent {
+  justify-content: flex-end;
+}
+
 .card_activity {
   background-color: white;
-  padding: 30px;
+  padding: 25px 50px;
+  width: 82%;
+}
+.card_activity .title {
+  font-weight: bold;
+  font-size: 1.2em;
+  margin-bottom: 10px;
 }
 
 .lightbox {
