--- a/src/css/_cards_project.scss
+++ b/src/css/_cards_project.scss
@@ -1,18 +1,23 @@
-$CARD_HEIGHT: 200px;
-$card-width: 42%;
+$CARD_HEIGHT: 240px;
+$THUMBNAIL_HEIGHT: 60px;
+$card-width: 45%;
 $space_around_card: 10px;
+$PROJ_CARD_BORDER: #cecece;
 
 .cardlist{
 	justify-content: center;
 }
+
 .card_project{
 	position:relative;
-	padding: 20px;
 	background-color: $light_mediumBase;
 	width: $card-width;
 	height: $CARD_HEIGHT;
 
 	border-bottom: 2px solid $light_darkBase;
+	border-top: 1px solid $PROJ_CARD_BORDER;
+	border-left: 1px solid $PROJ_CARD_BORDER;
+	border-right: 1px solid $PROJ_CARD_BORDER;
 
 	overflow: hidden;
 	margin-top: 8px; /* $space_around_card - border */
@@ -24,6 +29,28 @@ $space_around_card: 10px;
 
 	transition-property: color, margin, border, background-color;
 	transition-duration: 0.2s, 0.2s, 0.2s, 0.2s;
+
+	.thumbnail{
+		background-color: #c7c7c7;
+		height: $THUMBNAIL_HEIGHT;
+		overflow: hidden;
+		-webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+		  filter: grayscale(100%);
+
+		opacity: 0.5;
+		  
+		transition-property: filter, opacity;
+		transition-duration: 0.7s;
+
+		img{
+			width: 100%;
+			height: auto;
+		}
+	}
+
+	.card_content{
+		padding: 5px 20px 20px 20px;
+	}
 
 	.title{
 		text-transform: uppercase;
@@ -68,6 +95,14 @@ $space_around_card: 10px;
 	margin-top: 0px;
 	border-bottom: 10px solid $light_darkBase;
 	background-color: #e3e3e5;
+
+	.thumbnail{
+		-webkit-filter: grayscale(0%); /* Safari 6.0 - 9.0 */
+		filter: grayscale(0%);
+
+	  	opacity: 1;
+	
+	}
 }
 
 $width-expand-dur: 0.2s;
