Add conditional to show "role highlights" and "key features"

--- a/src/css/master.css
+++ b/src/css/master.css
@@ -59,6 +59,11 @@ strong {
   color: #4753c5;
 }
 
+.color.red {
+  color: #d1315c;
+  font-weight: bold;
+}
+
 .flex_row {
   display: flex;
   flex-direction: row;
