Scan through all project descriptions to fix typos and change wordings

--- a/src/css/_modal.scss
+++ b/src/css/_modal.scss
@@ -113,6 +113,12 @@
         margin-left: 30px;
     }
 
+    .challenges{
+        strong{
+            color: #1eaed1;
+        }
+    }
+
     .section_title{
         /* color: #1eaed1; */
         font-size: 1.1em;
