Finalize description on splash section

--- a/src/css/input.scss
+++ b/src/css/input.scss
@@ -1,6 +1,7 @@
 @import "vars";
 @import "header";
 @import "mainLayout";
+@import "splashLayout";
 @import "workExpLayout";
 @import "aboutMeLayout";
 
