--- a/src/css/master.css
+++ b/src/css/master.css
@@ -174,6 +174,14 @@ strong {
   color: #b4bdff;
 }
 
+#intro .big_title {
+  font-size: 3.2em;
+  font-weight: bold;
+}
+#intro h1 {
+  font-size: 1.5em;
+}
+
 /* style will be added soon */
 .skill_list {
   color: #6568ff;
