Add simple background to splash section

--- a/src/css/_splashLayout.scss
+++ b/src/css/_splashLayout.scss
@@ -1,4 +1,8 @@
 #intro{
+    background-image:url('img/splash_bg.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+
     .big_title{
         font-size: 3.2em;
         font-weight: bold;
