--- a/src/css/master.css
+++ b/src/css/master.css
@@ -174,6 +174,11 @@ strong {
   color: #b4bdff;
 }
 
+#intro {
+  background-image: url("img/splash_bg.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+}
 #intro .big_title {
   font-size: 3.2em;
   font-weight: bold;
