Adjust style on the sticky header

--- a/src/css/_splashLayout.scss
+++ b/src/css/_splashLayout.scss
@@ -3,6 +3,8 @@
     background-size: contain;
     background-repeat: no-repeat;
 
+    color: $light_lightKey;
+
     .big_title{
         font-size: 3.2em;
         font-weight: bold;
