--- a/src/css/_vars.scss
+++ b/src/css/_vars.scss
@@ -2,7 +2,8 @@ $light_lightBase: #f1f1f1;
 $light_mediumBase: #dddddf;
 $light_darkBase: #8d8d8d;
 
-$light_lightKey: #758bdf;
+$light_extralightKey: #f1f1ff;
+$light_lightKey: #7978b1;
 $light_mediumKey: #6568ff;
 $light_darkKey: #4c57bf;
 $light_extraDarkKey: #3e458b;
