--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -13,17 +13,19 @@
 	.group{
         align-self: center;
         padding-bottom: 5px;
-
-		a {
-            color: $light_mediumKey;
-			padding: 0 10px;
-		}
+		
     }
 
-    .logo{
+    a {
+        color: $light_extralightKey;
+        padding: 0 10px;
+
+        transition-property: color;
+        transition-duration: 0.3s;
+    }
+    a.logo{
         font-size: 1.5em;
         font-weight: bold;
-        color: $light_mediumKey;
     }
     
     .group:first-of-type{
@@ -31,7 +33,7 @@
     }
 
     .group:last-of-type{
-        margin-right: 20px;
+        margin-right: 30px;
     }
 }
 
@@ -41,4 +43,11 @@
     -webkit-box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.25);
     -moz-box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.25);
     box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.25);
+
+    color: $light_lightKey;
+
+    a{
+        color: $light_lightKey;
+    }
+
 }
