--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -10,22 +10,38 @@
     transition-duration: 0.3s;
     z-index: 100;
 
+    color: #f1f1ff7d;
+
 	.group{
         align-self: center;
         padding-bottom: 5px;
-		
+        
+        align-items: center;
+        
     }
 
     a {
         color: $light_extralightKey;
-        padding: 0 10px;
+        padding: 0 5px;
 
         transition-property: color;
         transition-duration: 0.3s;
+
+        text-decoration: none;
+    }
+    a:hover{
+        text-decoration: underline;
     }
     a.logo{
         font-size: 1.5em;
         font-weight: bold;
+    }
+
+    a.resume{
+        border-radius: 5px;
+        border: 1px solid white;
+        padding: 7px 15px;
+        margin-left: 10px;
     }
     
     .group:first-of-type{
@@ -44,7 +60,7 @@
     -moz-box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.25);
     box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.25);
 
-    color: $light_lightKey;
+    color: #7978b15e;
 
     a{
         color: $light_lightKey;
