--- a/src/css/master.css
+++ b/src/css/master.css
@@ -4,24 +4,36 @@
   position: fixed;
   width: 100%;
   background-color: transparent;
-  height: 50px;
+  height: 55px;
   transition-property: background-color, box-shadow;
   transition-duration: 0.3s;
   z-index: 100;
+  color: #f1f1ff7d;
 }
 #portfolio_header .group {
   align-self: center;
   padding-bottom: 5px;
+  align-items: center;
 }
 #portfolio_header a {
   color: #f1f1ff;
-  padding: 0 10px;
+  padding: 0 5px;
   transition-property: color;
   transition-duration: 0.3s;
+  text-decoration: none;
+}
+#portfolio_header a:hover {
+  text-decoration: underline;
 }
 #portfolio_header a.logo {
   font-size: 1.5em;
   font-weight: bold;
+}
+#portfolio_header a.resume {
+  border-radius: 5px;
+  border: 1px solid white;
+  padding: 7px 15px;
+  margin-left: 10px;
 }
 #portfolio_header .group:first-of-type {
   margin-left: 20px;
@@ -35,7 +47,7 @@
   -webkit-box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.25);
   -moz-box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.25);
   box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.25);
-  color: #7978b1;
+  color: #7978b15e;
 }
 #portfolio_header.detached a {
   color: #7978b1;
@@ -109,6 +121,7 @@ strong {
   height: 100%;
   overflow-y: scroll;
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
 .flushed_block {
@@ -217,10 +230,17 @@ strong {
   margin: 5px;
   background-color: #f1f1f1;
   border-bottom: 2px solid #dbdbdb;
-  padding: 10px;
   text-align: center;
   transition-property: height;
   transition-duration: 0.5s;
+}
+#key_skills .skill_list li .subskill_title {
+  background-color: #dad9e9;
+  padding: 10px;
+  color: #464e79;
+}
+#key_skills .skill_list li .subskill_content {
+  padding: 10px;
 }
 
 .me_description {
