--- a/src/css/_cards_project.scss
+++ b/src/css/_cards_project.scss
@@ -1,6 +1,7 @@
-$CARD_HEIGHT: 240px;
-$THUMBNAIL_HEIGHT: 60px;
-$card-width: 45%;
+
+$THUMBNAIL_HEIGHT: 124px;
+$CARD_WIDTH: 22vw;
+$CARD_HEIGHT: 300px;
 $space_around_card: 10px;
 $PROJ_CARD_BORDER: #cecece;
 
@@ -11,8 +12,9 @@ $PROJ_CARD_BORDER: #cecece;
 .card_project{
 	position:relative;
 	background-color: $light_mediumBase;
-	width: $card-width;
+	width: $CARD_WIDTH;
 	height: $CARD_HEIGHT;
+	font-size: 0.9em;
 
 	border-bottom: 2px solid $light_darkBase;
 	border-top: 1px solid $PROJ_CARD_BORDER;
@@ -32,7 +34,7 @@ $PROJ_CARD_BORDER: #cecece;
 
 	.thumbnail{
 		background-color: #c7c7c7;
-		height: $THUMBNAIL_HEIGHT;
+		height: fit-content;
 		overflow: hidden;
 		-webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
 		  filter: grayscale(100%);
@@ -125,43 +127,23 @@ $width-expand-dur: 0.2s;
 	transition-delay: 0.5s, 0.2s, 0.2s, 0.5s;
 }
 
-/* Note: because height needs to be calculated, it is done in main.js.
-		 check toggleCard() for details */
-@keyframes open-card{
-  0%{
-  	width: $card-width;
-  }
-  100% {
-  	width: 89%;
-  }
+
+@media (max-width: 1100px) {
+	.card_project{
+		width: 30vw;
+		height: 310px;
+	}
+}
+@media (max-width: 800px) {
+	.card_project{
+		width: 44vw;
+		height: 300px;
+	}
 }
 
-.card.filler{
-	padding: 0;
-	margin: 0;
-	pointer-events: none;
-	
-	width:100%;
-	height: 0px;
-	border:0px solid yellow;
-	overflow:hidden;
-
-	/* for shrinking
-	transition-property: width;
-	transition-duration: 0.25s; */
-}
-.card.filler.shrink{
-	/* this class is applied in fillerEnter() */
-}
-
-.card.hidden{
-	/* bug?: v-transition 'shift-card' does not happen if the first 
-			 clicked element is the first element in the list under the 
-			 v-transition 'shift-card'. All transition by clicking subsequent
-			 cards also fails. But if the first element clicked is 
-			 NOT the first card, the v-transition renders okay */
-	height: 0px;
-	pointer-events: none;
-	opacity: 0;
-	padding: 0; margin: 0;
+@media (max-width: 570px) {
+	.card_project{
+		width: 75vw;
+		height: 300px;
+	}
 }
