--- a/src/css/_vars.scss
+++ b/src/css/_vars.scss
@@ -1,6 +1,13 @@
+
 $light_lightBase: #f1f1f1;
 $light_mediumBase: #dddddf;
 $light_darkBase: #8d8d8d;
+
+/* PINK */
+/* $light_lightBase: #ffe5df;
+$light_mediumBase: #ffd3c9;
+$light_darkBase: #8d8d8d; */
+
 
 $light_extralightKey: #f1f1ff;
 $light_lightKey: #7978b1;
