--- a/src/css/_cards_project.scss
+++ b/src/css/_cards_project.scss
@@ -1,7 +1,7 @@
 
 $THUMBNAIL_HEIGHT: 124px;
 $CARD_WIDTH: 22vw;
-$CARD_HEIGHT: 300px;
+$CARD_HEIGHT: 320px;
 $space_around_card: 10px;
 $PROJ_CARD_BORDER: #cecece;
 
@@ -10,6 +10,10 @@ $PROJ_CARD_BORDER: #cecece;
 }
 
 .card_project{
+
+	display:flex;
+	flex-direction: column;
+
 	position:relative;
 	/* background-color: $light_mediumBase; */
 	background-color: white;
@@ -49,6 +53,12 @@ $PROJ_CARD_BORDER: #cecece;
 	}
 
 	.card_content{
+		flex-grow:1;
+
+		display:flex;
+		flex-direction: column;
+		justify-content: space-between;
+
 		padding: 5px 20px 20px 20px;
 	}
 
@@ -130,19 +140,20 @@ $width-expand-dur: 0.2s;
 @media (max-width: 1100px) {
 	.card_project{
 		width: 30vw;
-		height: 310px;
+		height: 320px;
 	}
 }
 @media (max-width: 800px) {
 	.card_project{
 		width: 44vw;
-		height: 300px;
+		height: 320px;
 	}
 }
 
 @media (max-width: 570px) {
 	.card_project{
 		width: 85vw;
+		font-size:0.9em;
 		height: 300px;
 	}
 }
