--- a/src/css/master.css
+++ b/src/css/master.css
@@ -266,7 +266,7 @@ strong {
   /* background-color: $light_mediumBase; */
   background-color: white;
   width: 22vw;
-  height: 320px;
+  height: 300px;
   font-size: 0.9em;
   border-bottom: 2px solid #8d8d8d;
   overflow: hidden;
@@ -361,20 +361,17 @@ strong {
 @media (max-width: 1100px) {
   .card_project {
     width: 30vw;
-    height: 320px;
   }
 }
 @media (max-width: 800px) {
   .card_project {
     width: 44vw;
-    height: 320px;
   }
 }
 @media (max-width: 570px) {
   .card_project {
     width: 85vw;
     font-size: 0.9em;
-    height: 300px;
   }
 }
 .work_card_wrapper {
@@ -569,8 +566,24 @@ strong {
   background-color: #f1f1f1;
   font-size: 1.5em;
 }
+.modal .links .decorator {
+  height: 60px;
+  border-left: 1px solid #b4bdff;
+  width: 0px;
+  margin: 1em auto 10px auto;
+}
+.modal .links a {
+  margin: 0 auto 7px auto;
+  color: #6568ff;
+  text-decoration: none;
+}
+.modal .links a:hover {
+  color: #4c57bf;
+  text-decoration: none;
+}
 .modal .description {
   margin-left: 30px;
+  margin-right: 30px;
 }
 .modal .challenges strong {
   color: #1eaed1;
@@ -591,6 +604,12 @@ strong {
   margin-top: 30px;
 }
 
+@media (max-width: 800px) {
+  .modal {
+    width: 85vw;
+    font-size: 0.9em;
+  }
+}
 @media (max-width: 570px) {
   .modal {
     width: 100vw;
