--- a/src/css/_cards_work.scss
+++ b/src/css/_cards_work.scss
@@ -61,7 +61,9 @@
 
     .card_body{
         line-height: 1.3em;
-
+        ul{
+            padding-left: 20px;
+        }
         li{
             margin-bottom: 10px;
         }
