Redfine content in activity section and make minor style adjustments

--- a/src/css/_cards_work.scss
+++ b/src/css/_cards_work.scss
@@ -2,7 +2,7 @@
     width: 100%;
     /* This is set by script */
     /* background-color: $light_mediumBase; */
-    margin: 50px 0;
+    margin: 20px 0 50px 0;
 }
 
 .content .work_card_wrapper:last-of-type{
