--- a/src/css/_cards_act.scss
+++ b/src/css/_cards_act.scss
@@ -14,9 +14,13 @@
     width: 82%;
 
     .title{
-        font-weight: bold;
-        font-size: 1.2em;
+
         margin-bottom: 10px;
+
+        text-transform: uppercase;
+        font-weight: bold;
+        font-family: monospace;
+        font-size: 1.5em;
     }
 }
 
