--- a/src/css/master.css
+++ b/src/css/master.css
@@ -472,6 +472,14 @@ strong {
   font-family: monospace;
   font-size: 1.5em;
 }
+.card_activity a {
+  font-weight: bold;
+  color: #6568ff;
+  text-decoration: none;
+}
+.card_activity a:hover {
+  text-decoration: underline;
+}
 
 .lightbox {
   position: fixed;
