--- a/src/css/_vars.scss
+++ b/src/css/_vars.scss
@@ -27,6 +27,7 @@ $hl-blue: #99cfb9;
 
 /* Layout variables */
 $content_width: 80vw;
+$CONTENT_WIDTH_MOBILE: 90vw;
 $WORK_EXP_MAX_WIDTH: 720px;
 $content_max_width: 800px;
 $HEADER_HEIGHT: 55px;
