--- a/src/css/master.css
+++ b/src/css/master.css
@@ -36,8 +36,12 @@ $light_darkBase: #8d8d8d; */
 #portfolio_header a.resume {
   border-radius: 5px;
   border: 1px solid white;
-  padding: 7px 15px;
+  padding: 7px 12px;
   margin-left: 10px;
+}
+#portfolio_header a.resume:hover {
+  text-decoration: none;
+  background-color: #ffffff29;
 }
 #portfolio_header .group:first-of-type {
   margin-left: 20px;
@@ -47,14 +51,21 @@ $light_darkBase: #8d8d8d; */
 }
 
 #portfolio_header.detached {
-  background-color: #ffffffe8;
+  background-color: rgba(255, 255, 255, 0.95);
   -webkit-box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.25);
   -moz-box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.25);
   box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.25);
-  color: #7978b15e;
+  color: rgba(121, 120, 177, 0.28);
 }
 #portfolio_header.detached a {
   color: #7978b1;
+}
+#portfolio_header.detached a.resume {
+  border: 1px solid #6568ff;
+  color: #6568ff;
+}
+#portfolio_header.detached a.resume:hover {
+  background-color: #6568ff12;
 }
 
 html {
@@ -146,7 +157,7 @@ strong {
 }
 .block .section_title_wrapper {
   font-size: 1.5em;
-  margin-top: 50px;
+  margin: 50px 0 0 20px;
 }
 .block .section_title_wrapper .line {
   display: inline-block;
@@ -196,6 +207,18 @@ strong {
   color: #b4bdff;
 }
 
+@media (max-width: 570px) {
+  .content {
+    font-size: 0.9em;
+  }
+
+  .block .content {
+    width: 90vw;
+  }
+  .block .content .section_title_wrapper {
+    margin: 50px 20px 0px 20px;
+  }
+}
 #intro {
   background-image: url("img/splash_bg.png");
   background-size: contain;
@@ -255,6 +278,11 @@ strong {
   margin-bottom: 80px;
 }
 
+@media (max-width: 570px) {
+  .me_description {
+    padding: 0px 15px;
+  }
+}
 .cardlist {
   justify-content: center;
 }
@@ -371,7 +399,8 @@ strong {
 @media (max-width: 570px) {
   .card_project {
     width: 85vw;
-    font-size: 0.9em;
+    /*font-size:0.9em;*/
+    height: auto;
   }
 }
 .work_card_wrapper {
@@ -449,6 +478,7 @@ strong {
 @media (max-width: 570px) {
   .work_card {
     font-size: 0.9em;
+    width: 90vw;
   }
 }
 .card_activity_wrapper {
