--- a/src/css/_cards_work.scss
+++ b/src/css/_cards_work.scss
@@ -36,6 +36,8 @@
     .card_head{
         .role{
             flex-grow: 1;
+            padding: 0 10px 0 0;
+            
             .role_name{
                 text-transform: uppercase;
                 font-weight: bold;
@@ -89,6 +91,11 @@
 
 @media (max-width: 570px) {
 	.work_card{
-		font-size: 0.9em;
+        font-size: 0.9em;
+        width: $CONTENT_WIDTH_MOBILE;
+
+        .content_right{
+            padding: 10px 15px;
+        }
 	}
 }
