--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -40,8 +40,12 @@
     a.resume{
         border-radius: 5px;
         border: 1px solid white;
-        padding: 7px 15px;
+        padding: 7px 12px;
         margin-left: 10px;
+    }
+    a.resume:hover{
+        text-decoration: none;
+        background-color: #ffffff29;
     }
     
     .group:first-of-type{
@@ -54,16 +58,24 @@
 }
 
 #portfolio_header.detached{
-    background-color: #ffffffe8;
+    background-color: rgba(255, 255, 255, 0.95);
 
     -webkit-box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.25);
     -moz-box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.25);
     box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.25);
 
-    color: #7978b15e;
+    color: rgba(121, 120, 177, 0.28);
 
     a{
         color: $light_lightKey;
+    }
+
+    a.resume{
+        border: 1px solid $light_mediumKey;
+        color: $light_mediumKey;
+    }
+    a.resume:hover{
+        background-color: #6568ff12;
     }
 
 }
